# zstAgent

./: .gitignore  05-3 作品报告（人工智能实践赛，2026版）模板.docx  05-3 作品报告（修改版）.docx  05-3 作品报告（排版修正版）.docx  05-3 官方作品报告（人工智能实践赛，2026版）模板.docx  PROJECT_GLOBAL_OUTLINE.md  README.md  api_server.py  app.py  failed_files.txt  generate_ppt.py  generate_ppt_v2.py  main.py  md5.text  pyproject.toml  runtime_status.py  wxyAgent项目结构与调用关系说明文档.md  侗族服饰与广西民族刺绣展牌文字整理.docx
.claude/: settings.local.json
agent/: react_agent.py
chroma_db/: chroma.sqlite3
config/: agent.yml  chroma.yml  prompts.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
model/: factory.py
modules/: __init__.py  ai_workflow_page.py  cultural_page.py  guide_page.py  home_page.py  pattern_page.py  scenario_page.py
pages/: __init__.py  ai_workflow_page.py  cocreate_page.py  cultural_page.py  guide_page.py  pattern_page.py  runtime_status.py  scenario_page.py
prompts/: faq_prompt.txt  guide_prompt.txt  label_prompt.txt  main_prompt.txt  rag_summarize.txt  report_prompt.txt  research_prompt.txt
rag/: ingest_compare.py  ingest_compare_report.json  rag_service.py  rerank_eval.py  vector_store.py
templates/: base.html  cocreate.html  guide.html  home.html  pattern.html
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
计算机设计大赛/: 05-1 作品信息概要表（人工智能实践赛、挑战赛，2026版）填写完成.docx  05-1 作品信息概要表（人工智能实践赛、挑战赛，2026版）模板.docx  05-2-AI工具使用说明（选用模板）（2026年版）.docx  05-2-AI工具使用说明（选用模板）（2026年版）填写完成.docx  05-3 作品报告（人工智能实践赛，2026版）填写完成.docx  (+3 more)
(+33 files in other folders)
