[project]
name = "wxyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "dashscope>=1.25.15",
    "fastapi>=0.116.1",
    "langchain>=1.2.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "matplotlib>=3.10.8",
    "pycryptodome>=3.23.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
    "uvicorn>=0.35.0",
]

[tool.setuptools]
packages = []
